# skeleton-based_3d_modeler

./: CMakeLists.txt  README.md  beautiful_camera.cpp  beautiful_camera.h  camera.cpp  camera.h  color.cpp  color.h  command.h  cone.cpp  cone.h  draw.cpp  draw.h  hittable.cpp  hittable.h  hittable_list.cpp  hittable_list.h  interactions.cpp  interactions.h  light.cpp  light.h  linked_spheres_group.cpp  linked_spheres_group.h  main.cpp  material.cpp  material.h  modeler.cpp  modeler.py  modeler.sh  modeler_taichi.py  phong_camera.cpp  phong_camera.h  ray.h  rtweekend.h  save_load.cpp  save_load.h  screen_segment.h  span3D.h  sphere.cpp  sphere.h  (+2 more)
binding/: CMakeLists.txt  application.cpp  lise.py  lise.sh
camera/: beautiful_camera.cpp  beautiful_camera.h  camera.cpp  camera.h  phong_camera.cpp  phong_camera.h
image/: draw.cpp  draw.h  screen_segment.h  span3D.cpp  span3D.h
scene_objects/: cone.cpp  cone.h  hittable.h  hittable_list.cpp  hittable_list.h  light.h  sphere.cpp  sphere.h
structures/: interactions.cpp  interactions.h  linked_spheres_group.cpp  linked_spheres_group.h  save_load.cpp  save_load.h
utilities/: color.cpp  color.h  interval.h  material.cpp  material.h  ray.h  rtweekend.h  vec3.cpp  vec3.h
